<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

 <item
  android:id="@+id/menu_read"
  android:icon="@drawable/ic_media_play"
  android:showAsAction="always"
  android:title="@string/menu_title_start"/>
 <item
  android:id="@+id/menu_clear"
  android:icon="@drawable/ic_menu_clear"
  android:showAsAction="always"
  android:title="@string/menu_title_clear"/>
 <item
  android:id="@+id/menu_more"
  android:icon="@drawable/ic_menu_more"
  android:showAsAction="always"
  android:title="@string/menu_title_more">
  <menu>
   <item
	android:id="@+id/menu_search"
	android:icon="@drawable/ic_menu_search"
	android:showAsAction="ifRoom"
	android:title="@string/menu_title_search"/>
  <item
   android:id="@+id/menu_newstart"
   android:icon="@drawable/ic_menu_rotate"
   android:showAsAction="ifRoom"
   android:title="@string/menu_title_restart"/>
  <item
   android:id="@+id/menu_setting"
   android:icon="@drawable/ic_menu_preferences"
   android:showAsAction="ifRoom"
   android:title="@string/menu_title_setting"/>
  </menu>
 </item>
 
</menu>
